--- a/thanhhuyapp/pubspec.yaml
+++ b/thanhhuyapp/pubspec.yaml
@@ -19,16 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.4.0+9
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+5
-  flutter_cupertino_date_picker: ^1.0.26
+  firebase_core:
+  firebase_auth:
+  cloud_firestore: ^0.12.7+1
+  firebase_database:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
-  flutter_svg:
-
+  flutter_svg: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,7 +46,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
